101-vm-centrestack/nestedtemplates/linkedNetworkTemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "dnsNameForPublicIP": {
            "defaultValue": "centrestack",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "Globally unique DNS Name for the Public IP used to access the Virtual Machine."
            }
        },
        "nicName": {
            "defaultValue": "",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the network interface."
            }
        },
        "vnetName": {
            "defaultValue": "vnet-CentreStack",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the virtual network."
            }
        },
        "pipName": {
            "defaultValue": "pip-CentreStack",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the public IP address."
            }
        },
        "nsgName": {
            "defaultValue": "nsg-CentreStack",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the Network Security Group."
            }
        },
        "asgName": {
            "defaultValue": "asg-CentreStack",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the Application Security Group."
            }
        },
        "subnetName": {
            "defaultValue": "sn-CentreStack",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The name of the subnet."
            }
        },
        "publicIPAddressType": {
            "defaultValue": "Static",
            "type": "string",
            "minLength": 1,
            "metadata": {
                "description": "The public IP address type."
            }
        }
    },
    "variables": {
        "addressPrefix": "10.0.0.0/16",
        "subnetPrefix": "10.0.0.0/24",
        "asgId": "[resourceId('Microsoft.Network/applicationSecurityGroups',parameters('asgName'))]",
        "nsgRuleNames": {
            "rdp": "AllowRDPToCentreStack",
            "http": "AllowHTTPToCentreStack",
            "https": "AllowHTTPSToCentreStack"
        }
    },
    "resources": [
        {
            "comments": "asg-CentreStack",
            "type": "Microsoft.Network/applicationSecurityGroups",
            "name": "[parameters('asgName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded"
            },
            "dependsOn": []
        },
        {
            "comments": "nic-CentreStack",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('nicName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "scale": null,
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('pipName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetName'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "applicationSecurityGroups": [
                                {
                                    "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('asgName'))]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "exrugufeylrupjg1z2t4kpp1ne.bx.internal.cloudapp.net"
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('pipName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetName'))]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('asgName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
        },
        {
            "comments": "nsg-CentreStack",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('nsgName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "securityRules": [
                    {
                        "name": "[variables('nsgRuleNames').https]",
                        "properties": {
                            "description": "Allow HTTPS to CentreStack Application SecurityGroup",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "id": "[variables('asgId')]"
                                }
                            ],
                            "destinationAddressPrefix": ""
                        }
                    },
                    {
                        "name": "[variables('nsgRuleNames').http]",
                        "properties": {
                            "description": "Allows HTTP to CentreStack Application Security Group",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "id": "[variables('asgId')]"
                                }
                            ],
                            "destinationAddressPrefix": ""
                        }
                    },
                    {
                        "name": "[variables('nsgRuleNames').rdp]",
                        "properties": {
                            "description": "Allows RDP to CentreStack Application Security Group",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": [],
                            "destinationApplicationSecurityGroups": [
                                {
                                    "id": "[variables('asgId')]"
                                }
                            ],
                            "destinationAddressPrefix": ""
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "properties": {
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "properties": {
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "properties": {
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('asgName'))]"
            ]
        },
        {
            "comments": "pip-CentreStack'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "name": "[parameters('pipName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "[parameters('publicIPAddressType')]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsNameForPublicIP')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "vnet-CentreStack",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('vnetName')]",
            "apiVersion": "2018-02-01",
            "location": "[resourceGroup().location]",
            "scale": null,
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                            },
                            "serviceEndpoints": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
        },
        {
            "comments": "nsg rule AllowHTTPSToCentreStack",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('nsgName'), '/', variables('nsgRuleNames').https)]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
              "description": "Allow HTTPS to CentreStack Application SecurityGroup",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[variables('asgId')]"
                }
              ],
              "destinationAddressPrefix": ""
            },
            "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
          },
          {
            "comments": "nsg rule AllowHTTPToCentreStack",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('nsgName'), '/', variables('nsgRuleNames').http)]",
            "location": "[resourceGroup().location]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
              "description": "Allows HTTP to CentreStack Application Security Group",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[variables('asgId')]"
                }
              ],
              "destinationAddressPrefix": ""
            },
            "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
          },
          {
            "comments": "nsg rule AllowRDPToCentreStack",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "location": "[resourceGroup().location]",
            "name": "[concat(parameters('nsgName'), '/', variables('nsgRuleNames').rdp)]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
              "description": "Allows RDP to CentreStack Application Security Group",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationApplicationSecurityGroups": [
                {
                  "id": "[variables('asgId')]"
                }
              ],
              "destinationAddressPrefix": ""
            },
            "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
          },
          {
            "comments": "subnet sn-Public",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('vnetName'), '/', parameters('subnetName'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
              },
              "serviceEndpoints": []
            },
            "dependsOn": [
              "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
            ]
          }        
    ],
    "outputs": {
        "nicResourceId": {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nicName'))]"
        },
        "privateIPAddress": {
            "type": "string",
            "value": "[reference(concat('Microsoft.Network/networkInterfaces/', parameters('nicName'))).ipConfigurations[0].properties.privateIPAddress]"
        },
        "publicIPAddress": {
            "type": "string",
            "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', parameters('pipName'))).ipAddress]"
        },
        "fqdn": {
            "type": "string",
            "value": "[reference(concat('Microsoft.Network/publicIPAddresses/', parameters('pipName'))).dnsSettings.fqdn]"
        }

    }
}
